Divs correctly placed and collapsable sidebar functionality added

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,4 +11,32 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.content-container{
+  display: flex;
+}
+
+.sidebar{
+  flex: 0 0 15%;
+  border: 1px solid black;
+}
+
+.currentPage {
+  flex: 1;
+  border: 1px solid black;
+}
+
+.app-container{
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.Header{
+  display: 'flex';
+  justify-content: space-between;
+  width: '100%';
+  border: 1px solid black;
 }
